# rschip8

./: Cargo.toml  README.md
chip8-sdl2/: Cargo.toml  README.md
chip8-sdl2/src/: main.rs
src/: chip8.rs  cpu.rs  instruction.rs  lib.rs  memory.rs  quirks.rs
src/test_data/: 1-chip8-logo.txt  2-ibm-logo.txt  3-corax+.txt  4-flags.txt  5-quirks-chip8.txt  5-quirks-superchip.txt  5-quirks-xochip.txt  7-hires-quirks-chip8.txt  7-hires-quirks-superchip.txt  7-hires-quirks-xochip.txt  7-hires-quirks.ch8  ibm-logo-shift-down.ch8  ibm-logo-shift-down.txt  ibm-logo-shift-left.ch8  ibm-logo-shift-left.txt  ibm-logo-shift-right.ch8  ibm-logo-shift-right.txt
