[package]
name = "chip8-sdl2"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { version = "0.1.0", path = ".." }

env_logger = "*"
log = "*"
sdl2 = { version = "0.35.2", features = ["ttf"] }
